Arreglado el filtro de TipoItem. Ahora lista bien los activos/inactivos. Dentro de la carga estática fue incluido el de tipos de atributos primarios.

--- a/my/templates/tipoItemManager.html
+++ b/my/templates/tipoItemManager.html
@@ -50,7 +50,7 @@
 								formatter : 'select',
 								stype : 'select',
 								editoptions : {
-									value : "activo:Activo;inactivo:Inactivo"
+									value : "todos:Todos;activo:Activo;inactivo:Inactivo"
 								},
 								hidden : false
 							}, {
@@ -186,7 +186,7 @@
 						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;"
 						class="ui-widget-content ui-corner-all">
 							<option value="activo">Activo</option>
-							<option value="finalizado">Inactivo</option>
+							<option value="inactivo">Inactivo</option>
 					</select></td>
 					<input type="hidden" name="idProyecto" id="idProyecto" />
 				</tr>
