--- a/my/templates/fasesManager.html
+++ b/my/templates/fasesManager.html
@@ -21,7 +21,7 @@
 
 											// datatype : "local",
 											// data:mydata,
-											url : 'http://localhost:5000/listarFases',
+											url : '/listarFases/',
 											datatype : "json",
 											mtype : "get",
 											postData:{idProyecto: retornaValorenSesion()},
