Integracion completa con Items. Falta corregir pequenos bugs. Falta LB. Falta integrar con apache.

--- a/my/templates/itemsManager.html
+++ b/my/templates/itemsManager.html
@@ -402,7 +402,7 @@
 		var form = ['<form id="formTI" action=\'\'>']//[ '<form method="POST" action="', url, '">' ];
 		var input_que_son_fecha=['']
 		var lista_input_numerico=['']
-		//window.atributosTI=params_vec;
+		window.atributosTI=params_vec;
 		
 		for(var i=0; i<params_vec.length;i++){
 					form.push('<td>');
@@ -816,7 +816,7 @@
 		    
 		});*/
 		if(atributosTI!=null){
-			alert("entro al for")
+			//alert("entro al for") 
 			for(var i=0; i<atributosTI.length;i++){
 				//alert("#input_"+atributosTI[i]["nombreAtributo"])
 				$("#input_"+atributosTI[i]["nombreAtributo"]).attr('disabled', habilitar);
