--- a/my/templates/tipoItemManager.html
+++ b/my/templates/tipoItemManager.html
@@ -656,13 +656,13 @@
 															/* se indican los parametros*/
 															nombreTipoItem : $(
 																	"#nombreTipoItem")
-																	.val(),
+																	.val().trim(),
 															descripcion : $(
 																	"#descripcion")
-																	.val(),
+																	.val().trim(),
 															estado : $(
 																	"#estado")
-																	.val(),
+																	.val().trim(),
 															idProyecto : retornaValorenSesion(),
 															//aca se debe obtener los datos del grid anterior
 															//se jasoniza la lista y se envia por el post
@@ -717,16 +717,16 @@
 														{
 															idTipoItem : $(
 																	"#idTipoItem")
-																	.val(),
+																	.val().trim(),
 															nombreTipoItem : $(
 																	"#nombreTipoItem")
-																	.val(),
+																	.val().trim(),
 															descripcion : $(
 																	"#descripcion")
-																	.val(),
+																	.val().trim(),
 															estado : $(
 																	"#estado")
-																	.val(),
+																	.val().trim(),
 															idProyecto : retornaValorenSesion(),
 															//aca se debe obtener los datos del grid dentro del form 
 															//se jasoniza la lista y se envia por el post
