Funciona LB. Falta listar items en LB.

--- a/my/templates/baseMiembro.html
+++ b/my/templates/baseMiembro.html
@@ -200,7 +200,7 @@
 					</ul></li>
 				<li><a href="#">Gestion de Cambios</a>
 					<ul style="width:210px">
-						<li><a href="#">Linea Base Manager</a>
+						<li><a href="{{url_for('LBManager')}}">Linea Base Manager</a>
 						<li><a href="{{url_for('tipoItemManager')}}">Tipo Item Manager</a>
 					</ul></li> {% else %} {% endif %}
 			</ul>
