--- a/my/templates/itemsManager.html
+++ b/my/templates/itemsManager.html
@@ -1297,8 +1297,9 @@
 <div id='msgbox' title='' style='display: none'></div>
 
 {% endblock %} {% block body %}
+<h2>Administrar Items</h2>
 <td><label>Fase:</label><select id="comboBoxFases"
-	style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;"
+	style="display: block; margin-bottom: 12px; padding: 0.4em; width: auto;"
 	class="ui-widget-content ui-corner-all">
 		<option value="0">(Ninguna)</option>
 
