--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -4,19 +4,19 @@
 
 	
 	<link rel="stylesheet" type="text/css" media="screen" 
-		href="/static/css/redmond/jquery-ui-1.9.2.custom.css" />
+		href="{{ url_for('static', filename='css/redmond/jquery-ui-1.9.2.custom.css') }}" />
 	<link rel="stylesheet" type="text/css" media="screen"
-		href="/static/css/ui.jqgrid.css" />
+		href="{{ url_for('static', filename='css/ui.jqgrid.css') }}" />
 	<!-- <link rel="stylesheet" type="text/css" href="/static/css/stylem.css" />-->
 	
-	<script type="text/javascript" src="/static/js/jquery-1.8.3.js"></script>
-	<script type="text/javascript" src="/static/js/jquery.maskedinput.js"></script>
-	<script type="text/javascript" src="/static/js/jquery.number.js"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.8.3.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.number.js') }}"></script>
 	<script type="text/javascript"
-		src="/static/js/jquery-ui-1.9.2.custom.js"></script>
-	<script type="text/javascript" src="/static/js/i18n/grid.locale-en.js"></script>
-	<script type="text/javascript" src="/static/js/jquery.jqGrid.min.js"></script>
-	<script type="text/javascript" src="/static/js/WebToolKit.MD5.js"></script>
+		src="{{ url_for('static', filename='js/jquery-ui-1.9.2.custom.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/i18n/grid.locale-en.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.jqGrid.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/WebToolKit.MD5.js') }}"></script>
 		<title>WAPM</title>
 	<style>
 		.ui-menu {  float:left;  z-index: 5; }
